<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLight"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/tiny_padding">


        <Button
            android:id="@+id/home_nav"
            style="@style/nav_menu_opt"
            android:drawableTop="@drawable/book_stack_from_pixabay_nav"
            android:text="@string/home" />

        <Button
            android:id="@+id/current_nav"
            style="@style/nav_menu_opt"
            android:drawableTop="@drawable/reading_from_pixabay_nav"
            android:text="@string/currently_reading" />

        <Button
            android:id="@+id/shelf_nav"
            style="@style/nav_menu_opt"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/small_stack_from_pixabay_nav"
            android:text="@string/bookshelf" />

        <Button
            android:id="@+id/discover_nav"
            style="@style/nav_menu_opt"
            android:drawableTop="@drawable/book_w_lamp_from_pixabay_nav"
            android:text="@string/discover" />

    </LinearLayout>

    <TextView
        android:id="@+id/book_current"
        android:text="@string/title"
        app:fontFamily="@font/crimson_text"
        style="@style/title_reading" />

    <TextView
        android:id="@+id/author_current"
        style="@style/emphasisText"
        android:gravity="center"
        android:text="@string/written_by_author_s_name"
        app:fontFamily="@font/crimson_text_italic"/>

    <TextView
        android:id="@+id/narrator_current"
        style="@style/italicText"
        android:gravity="center"
        android:text="@string/narrated_by_narrator_s_name"
        app:fontFamily="@font/crimson_text_italic"/>

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/book_cover_from_pixabay"
        style="@style/book_cover" />

    <TextView
        android:id="@+id/chapterNumber"
        android:text="@string/chapter_1"
        app:fontFamily="@font/crimson_text"
        style="@style/chapter_reading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/med_padding"
        android:layout_marginLeft="@dimen/med_padding"
        android:layout_marginRight="@dimen/med_padding"
        android:layout_marginStart="@dimen/med_padding"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            app:srcCompat="@android:drawable/ic_media_previous"
            style="@style/play_opt_button" />

        <ImageView
            android:id="@+id/imageView3"
            app:srcCompat="@android:drawable/ic_media_rew"
            style="@style/play_opt_button" />

        <ImageView
            android:id="@+id/imageView4"
            app:srcCompat="@android:drawable/ic_media_play"
            style="@style/press_play_opt_button" />

        <ImageView
            android:id="@+id/imageView5"
            app:srcCompat="@android:drawable/ic_media_ff"
            style="@style/play_opt_button" />

        <ImageView
            android:id="@+id/imageView6"
            app:srcCompat="@android:drawable/ic_media_next"
            style="@style/play_opt_button" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:text="@string/time_default"
        app:fontFamily="@font/crimson_text"
        style="@style/time_reading" />

</LinearLayout>